# CloakBrowser-Manager

./: .gitignore  DESKTOP.md  README.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: LaunchButton.tsx  ProfileForm.tsx  ProfileList.tsx
frontend/src/hooks/: useAccounts.test.ts  useAccounts.ts
frontend/src/lib/: api.test.ts  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: cloak_launcher.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  launcher.rs  lib.rs  main.rs  models.rs  store.rs
