[package]
name = "cloak-accounts"
version = "0.1.0"
description = "本地账号浏览器管理器 — 每个账号独立配置，有头浏览器窗口"
authors = ["CloakBrowser"]
edition = "2021"

[lib]
name = "cloak_accounts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"
dirs = "5"
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
